k8s/aplication/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: projektapp
  name: projektapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projektapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: projektapp
    spec:
      containers:
      - command:
        image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj23/walletapp
        name: projektapp
        resources: {}
status: {}
