k8s/aplication/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: projektappsvc
  labels:
    app: projektapp
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 8080
  selector:
    app: projektapp
  type: ClusterIP
